# zzr_nes

./: CLAUDE.md  Cargo.toml  README.md  plan.md
roms/: AccuracyCoin.nes
src/: bus.rs  cpu.rs  main.rs  test.txt
src/nes/: apu.rs  audio_output.rs  bus.rs  controller.rs  cpu.rs  cpu_flag.rs  debugger.rs  mod.rs  nes.rs  ppu.rs  ram2k.rs  rom.rs
src/nes/bus/: mod.rs
src/nes/controller/: mod.rs
src/nes/cpu/: flag.rs  mod.rs
src/nes/ppu/: mod.rs
src/nes/ram2k/: mod.rs
src/nes/rom/: mod.rs
