[package]
name = "rustynes"
version = "0.1.0"
authors = ["Thomas Polasek <tpolasek@invidi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
hex = "0.4.2"
minifb = "0.19.1"
rand = "0.8.1"

[profile.dev]
opt-level = 3
overflow-checks = false     # false => Disable integer overflow checks.

