[package]
name = "rustynes"
version = "0.1.0"
authors = ["Thomas Polasek <tpolasek@invidi.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
hex = "0.4.2"
minifb = "0.19.1"
rand = "0.8.1"
console = "0.14.0"
eframe = "0.24"
egui = "0.24"
cpal = "0.15"

[profile.release]
debug = true

[profile.dev]
opt-level = 0 # Set to 3 for max perf
overflow-checks = false     # false => Disable integer overflow checks.

